--- a/css/styles.css
+++ b/css/styles.css
@@ -341,22 +341,58 @@ body {
     padding: 10px;
     background-color: #f5f5f5;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow: hidden; 
 }
 
-.client-reviews img {
+.review {
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+
+.review:hover {
+    transform: scale(1.02); 
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2); 
+    background-color: #e9e9e9; 
+}
+
+.review img {
     max-width: 80px;
     border-radius: 50%;
+    transition: transform 0.3s ease; 
 }
 
-.client-reviews p {
-    font-size: 14px;
-    margin-top: 10px;
+.review img:hover {
+    transform: scale(1.1); 
 }
 
-.client-reviews h3 {
+.review h3 {
     font-weight: bold;
     margin-top: 10px;
+    transition: color 0.3s ease; 
 }
+
+.review h3:hover {
+    color: #4CAF50;
+}
+
+.review p {
+    font-size: 14px;
+    margin-top: 10px;
+    transition: color 0.3s ease; 
+}
+
+.review p:hover {
+    color: #4CAF50; 
+}
+
+
 
 
 footer {
